include/hyperdex/client.h

struct hyperdex_client;
struct hyperdex_client_microtransaction;
struct hyperdex_client_attribute
{
    const char* attr; /* NULL-terminated */
    const char* value;
    size_t value_sz;
    enum hyperdatatype datatype;
};
struct hyperdex_client_map_attribute
{
    const char* attr; /* NULL-terminated */
    const char* map_key;
    size_t map_key_sz;
    enum hyperdatatype map_key_datatype;
    const char* value;
    size_t value_sz;
    enum hyperdatatype value_datatype;
};
struct hyperdex_client_attribute_check
{
    const char* attr; /* NULL-terminated */
    const char* value;
    size_t value_sz;
    enum hyperdatatype datatype;
    enum hyperpredicate predicate;
};
/* hyperdex_client_returncode occupies [8448, 8576) */
enum hyperdex_client_returncode
{
    HYPERDEX_CLIENT_SUCCESS      = 8448,
    HYPERDEX_CLIENT_NOTFOUND     = 8449,
    HYPERDEX_CLIENT_SEARCHDONE   = 8450,
    HYPERDEX_CLIENT_CMPFAIL      = 8451,
    HYPERDEX_CLIENT_READONLY     = 8452,

    /* Error conditions */
    HYPERDEX_CLIENT_UNKNOWNSPACE = 8512,
    HYPERDEX_CLIENT_COORDFAIL    = 8513,
    HYPERDEX_CLIENT_SERVERERROR  = 8514,
    HYPERDEX_CLIENT_POLLFAILED   = 8515,
    HYPERDEX_CLIENT_OVERFLOW     = 8516,
    HYPERDEX_CLIENT_RECONFIGURE  = 8517,
    HYPERDEX_CLIENT_TIMEOUT      = 8519,
    HYPERDEX_CLIENT_UNKNOWNATTR  = 8520,
    HYPERDEX_CLIENT_DUPEATTR     = 8521,
    HYPERDEX_CLIENT_NONEPENDING  = 8523,
    HYPERDEX_CLIENT_DONTUSEKEY   = 8524,
    HYPERDEX_CLIENT_WRONGTYPE    = 8525,
    HYPERDEX_CLIENT_NOMEM        = 8526,
    HYPERDEX_CLIENT_INTERRUPTED  = 8530,
    HYPERDEX_CLIENT_CLUSTER_JUMP = 8531,
    HYPERDEX_CLIENT_OFFLINE      = 8533,
    HYPERDEX_CLIENT_UNAUTHORIZED = 8534,

    /* This should never happen.  It indicates a bug */
    HYPERDEX_CLIENT_INTERNAL     = 8573,
    HYPERDEX_CLIENT_EXCEPTION    = 8574,
    HYPERDEX_CLIENT_GARBAGE      = 8575
};
const char*
hyperdex_client_returncode_to_string(enum hyperdex_client_returncode);