include/hyperdex/datastructures.h

/* types */
struct hyperdex_ds_arena;
struct hyperdex_ds_list;
struct hyperdex_ds_set;
struct hyperdex_ds_map;
struct hyperdex_ds_iterator
{
    enum hyperdatatype datatype;
    const char* value;
    const char* value_end;
    const char* progress;
};
/* errors */
enum hyperdex_ds_returncode
{
    HYPERDEX_DS_SUCCESS,
    HYPERDEX_DS_NOMEM,
    HYPERDEX_DS_MIXED_TYPES,
    HYPERDEX_DS_WRONG_STATE,
    HYPERDEX_DS_STRING_TOO_LONG
};
/* arena manipulation */
struct hyperdex_ds_arena*
hyperdex_ds_arena_create();
void
hyperdex_ds_arena_destroy(struct hyperdex_ds_arena* arena);
void*
hyperdex_ds_malloc(struct hyperdex_ds_arena* arena, size_t sz);
/* client parameters */
struct hyperdex_client_attribute*
hyperdex_ds_allocate_attribute(struct hyperdex_ds_arena* arena, size_t sz);
struct hyperdex_client_attribute_check*
hyperdex_ds_allocate_attribute_check(struct hyperdex_ds_arena* arena, size_t sz);
struct hyperdex_client_map_attribute*
hyperdex_ds_allocate_map_attribute(struct hyperdex_ds_arena* arena, size_t sz);
int
hyperdex_ds_unpack_int(const char* buf, size_t buf_sz, int64_t* num);
int
hyperdex_ds_unpack_float(const char* buf, size_t buf_sz, double* num);
/* copy strings/ints/floats */
int
hyperdex_ds_copy_string(struct hyperdex_ds_arena* arena,
                        const char* str, size_t str_sz,
                        enum hyperdex_ds_returncode* status,
                        const char** value, size_t* value_sz);
int
hyperdex_ds_copy_int(struct hyperdex_ds_arena* arena, int64_t num,
                     enum hyperdex_ds_returncode* status,
                     const char** value, size_t* value_sz);
int
hyperdex_ds_copy_float(struct hyperdex_ds_arena* arena, double num,
                       enum hyperdex_ds_returncode* status,
                       const char** value, size_t* value_sz);
/* pack lists */
struct hyperdex_ds_list*
hyperdex_ds_allocate_list(struct hyperdex_ds_arena* arena);
int
hyperdex_ds_list_append_string(struct hyperdex_ds_list* list,
                               const char* str, size_t str_sz,
                               enum hyperdex_ds_returncode* status);
int
hyperdex_ds_list_append_int(struct hyperdex_ds_list* list,
                            int64_t num,
                            enum hyperdex_ds_returncode* status);
int
hyperdex_ds_list_append_float(struct hyperdex_ds_list* list,
                              double num,
                              enum hyperdex_ds_returncode* status);
int
hyperdex_ds_list_finalize(struct hyperdex_ds_list* list,
                          enum hyperdex_ds_returncode* status,
                          const char** value, size_t* value_sz,
                          enum hyperdatatype* datatype);
/* pack sets */
struct hyperdex_ds_set*
hyperdex_ds_allocate_set(struct hyperdex_ds_arena* arena);
int
hyperdex_ds_set_insert_string(struct hyperdex_ds_set* set, const char* str, size_t str_sz,
                              enum hyperdex_ds_returncode* status);
int
hyperdex_ds_set_insert_int(struct hyperdex_ds_set* set, int64_t num,
                           enum hyperdex_ds_returncode* status);
int
hyperdex_ds_set_insert_float(struct hyperdex_ds_set* set, double num,
                             enum hyperdex_ds_returncode* status);
int
hyperdex_ds_set_finalize(struct hyperdex_ds_set*,
                         enum hyperdex_ds_returncode* status,
                         const char** value, size_t* value_sz,
                         enum hyperdatatype* datatype);
/* pack maps */
struct hyperdex_ds_map*
hyperdex_ds_allocate_map(struct hyperdex_ds_arena* arena);
int
hyperdex_ds_map_insert_key_string(struct hyperdex_ds_map* map,
                                  const char* str, size_t str_sz,
                                  enum hyperdex_ds_returncode* status);
int
hyperdex_ds_map_insert_val_string(struct hyperdex_ds_map* map,
                                  const char* str, size_t str_sz,
                                  enum hyperdex_ds_returncode* status);
int
hyperdex_ds_map_insert_key_int(struct hyperdex_ds_map* map, int64_t num,
                               enum hyperdex_ds_returncode* status);
int
hyperdex_ds_map_insert_val_int(struct hyperdex_ds_map* map, int64_t num,
                               enum hyperdex_ds_returncode* status);
int
hyperdex_ds_map_insert_key_float(struct hyperdex_ds_map* map, double num,
                                 enum hyperdex_ds_returncode* status);
int
hyperdex_ds_map_insert_val_float(struct hyperdex_ds_map* map, double num,
                                 enum hyperdex_ds_returncode* status);
int
hyperdex_ds_map_finalize(struct hyperdex_ds_map*,
                         enum hyperdex_ds_returncode* status,
                         const char** value, size_t* value_sz,
                         enum hyperdatatype* datatype);
/* iterate datatypes */
void
hyperdex_ds_iterator_init(struct hyperdex_ds_iterator* iter,
                          enum hyperdatatype datatype,
                          const char* value,
                          size_t value_sz);
/* list */
int
hyperdex_ds_iterate_list_string_next(struct hyperdex_ds_iterator* iter,
                                     const char** str, size_t* str_sz);
int
hyperdex_ds_iterate_list_int_next(struct hyperdex_ds_iterator* iter, int64_t* num);
int
hyperdex_ds_iterate_list_float_next(struct hyperdex_ds_iterator* iter, double* num);
/* set */
int
hyperdex_ds_iterate_set_string_next(struct hyperdex_ds_iterator* iter,
                                    const char** str, size_t* str_sz);
int
hyperdex_ds_iterate_set_int_next(struct hyperdex_ds_iterator* iter, int64_t* num);
int
hyperdex_ds_iterate_set_float_next(struct hyperdex_ds_iterator* iter, double* num);
/* map(string, *) */
int
hyperdex_ds_iterate_map_string_string_next(struct hyperdex_ds_iterator* iter,
                                           const char** key, size_t* key_sz,
                                           const char** val, size_t* val_sz);
int
hyperdex_ds_iterate_map_string_int_next(struct hyperdex_ds_iterator* iter,
                                        const char** key, size_t* key_sz,
                                        int64_t* val);
int
hyperdex_ds_iterate_map_string_float_next(struct hyperdex_ds_iterator* iter,
                                          const char** key, size_t* key_sz,
                                          double* val);
/* map(int, *) */
int
hyperdex_ds_iterate_map_int_string_next(struct hyperdex_ds_iterator* iter,
                                        int64_t* key,
                                        const char** val, size_t* val_sz);
int
hyperdex_ds_iterate_map_int_int_next(struct hyperdex_ds_iterator* iter,
                                     int64_t* key,
                                     int64_t* val);
int
hyperdex_ds_iterate_map_int_float_next(struct hyperdex_ds_iterator* iter,
                                       int64_t* key,
                                       double* val);
/* map(float, *) */
int
hyperdex_ds_iterate_map_float_string_next(struct hyperdex_ds_iterator* iter,
                                          double* key,
                                          const char** val, size_t* val_sz);
int
hyperdex_ds_iterate_map_float_int_next(struct hyperdex_ds_iterator* iter,
                                       double* key,
                                       int64_t* val);
int
hyperdex_ds_iterate_map_float_float_next(struct hyperdex_ds_iterator* iter,
                                         double* key,
                                         double* val);