bindings/python/hyperdex/client.pyx


    hyperdex_ds_arena* hyperdex_ds_arena_create()
    void hyperdex_ds_arena_destroy(hyperdex_ds_arena* arena)

    void* hyperdex_ds_malloc(hyperdex_ds_arena* arena, size_t sz)
    hyperdex_client_attribute* hyperdex_ds_allocate_attribute(hyperdex_ds_arena* arena, size_t sz)
    hyperdex_client_attribute_check* hyperdex_ds_allocate_attribute_check(hyperdex_ds_arena* arena, size_t sz)
    hyperdex_client_map_attribute* hyperdex_ds_allocate_map_attribute(hyperdex_ds_arena* arena, size_t sz)

    int hyperdex_ds_unpack_int(char* buf, size_t buf_sz, int64_t* num)
    int hyperdex_ds_unpack_float(char* buf, size_t buf_sz, double* num)

    int hyperdex_ds_copy_string(hyperdex_ds_arena* arena, char* str, size_t str_sz, hyperdex_ds_returncode* status, char** value, size_t* value_sz)
    int hyperdex_ds_copy_int(hyperdex_ds_arena* arena, int64_t num, hyperdex_ds_returncode* status, char** value, size_t* value_sz)
    int hyperdex_ds_copy_float(hyperdex_ds_arena* arena, double num, hyperdex_ds_returncode* status, char** value, size_t* value_sz)

    cdef struct hyperdex_ds_list
    hyperdex_ds_list* hyperdex_ds_allocate_list(hyperdex_ds_arena* arena)
    int hyperdex_ds_list_append_string(hyperdex_ds_list* list, char* str, size_t str_sz, hyperdex_ds_returncode* status)
    int hyperdex_ds_list_append_int(hyperdex_ds_list* list, int64_t num, hyperdex_ds_returncode* status)
    int hyperdex_ds_list_append_float(hyperdex_ds_list* list, double num, hyperdex_ds_returncode* status)
    int hyperdex_ds_list_finalize(hyperdex_ds_list* list, hyperdex_ds_returncode* status, const char** value, size_t* value_sz, hyperdatatype* datatype)

    cdef struct hyperdex_ds_set
    hyperdex_ds_set* hyperdex_ds_allocate_set(hyperdex_ds_arena* arena)
    int hyperdex_ds_set_insert_string(hyperdex_ds_set* set, char* str, size_t str_sz, hyperdex_ds_returncode* status)
    int hyperdex_ds_set_insert_int(hyperdex_ds_set* set, int64_t num, hyperdex_ds_returncode* status)
    int hyperdex_ds_set_insert_float(hyperdex_ds_set* set, double num, hyperdex_ds_returncode* status)
    int hyperdex_ds_set_finalize(hyperdex_ds_set*, hyperdex_ds_returncode* status, const char** value, size_t* value_sz, hyperdatatype* datatype)

    cdef struct hyperdex_ds_map
    hyperdex_ds_map* hyperdex_ds_allocate_map(hyperdex_ds_arena* arena)
    int hyperdex_ds_map_insert_key_string(hyperdex_ds_map* map, char* str, size_t str_sz, hyperdex_ds_returncode* status)
    int hyperdex_ds_map_insert_val_string(hyperdex_ds_map* map, char* str, size_t str_sz, hyperdex_ds_returncode* status)
    int hyperdex_ds_map_insert_key_int(hyperdex_ds_map* map, int64_t num, hyperdex_ds_returncode* status)
    int hyperdex_ds_map_insert_val_int(hyperdex_ds_map* map, int64_t num, hyperdex_ds_returncode* status)
    int hyperdex_ds_map_insert_key_float(hyperdex_ds_map* map, double num, hyperdex_ds_returncode* status)
    int hyperdex_ds_map_insert_val_float(hyperdex_ds_map* map, double num, hyperdex_ds_returncode* status)
    int hyperdex_ds_map_finalize(hyperdex_ds_map*, hyperdex_ds_returncode* status, const char** value, size_t* value_sz, hyperdatatype* datatype)

    cdef struct hyperdex_ds_iterator:
        pass
    void hyperdex_ds_iterator_init(hyperdex_ds_iterator* it, hyperdatatype datatype, char* value, size_t value_sz)
    int hyperdex_ds_iterate_list_string_next(hyperdex_ds_iterator* it, char** str, size_t* str_sz)
    int hyperdex_ds_iterate_list_int_next(hyperdex_ds_iterator* it, int64_t* num)
    int hyperdex_ds_iterate_list_float_next(hyperdex_ds_iterator* it, double* num)
    int hyperdex_ds_iterate_set_string_next(hyperdex_ds_iterator* it, char** str, size_t* str_sz)
    int hyperdex_ds_iterate_set_int_next(hyperdex_ds_iterator* it, int64_t* num)
    int hyperdex_ds_iterate_set_float_next(hyperdex_ds_iterator* it, double* num)
    int hyperdex_ds_iterate_map_string_string_next(hyperdex_ds_iterator* it, char** key, size_t* key_sz, char** val, size_t* val_sz)
    int hyperdex_ds_iterate_map_string_int_next(hyperdex_ds_iterator* it, char** key, size_t* key_sz, int64_t* val)
    int hyperdex_ds_iterate_map_string_float_next(hyperdex_ds_iterator* it, char** key, size_t* key_sz, double* val)
    int hyperdex_ds_iterate_map_int_string_next(hyperdex_ds_iterator* it, int64_t* key, char** val, size_t* val_sz)
    int hyperdex_ds_iterate_map_int_int_next(hyperdex_ds_iterator* it, int64_t* key, int64_t* val)
    int hyperdex_ds_iterate_map_int_float_next(hyperdex_ds_iterator* it, int64_t* key, double* val)
    int hyperdex_ds_iterate_map_float_string_next(hyperdex_ds_iterator* it, double* key, char** val, size_t* val_sz)
    int hyperdex_ds_iterate_map_float_int_next(hyperdex_ds_iterator* it, double* key, int64_t* val)
    int hyperdex_ds_iterate_map_float_float_next(hyperdex_ds_iterator* it, double* key, double* val)


ctypedef object (*encret_deferred_fptr)(Deferred d)
ctypedef object (*encret_iterator_fptr)(Iterator it)
# Begin Automatically Generated Function Pointers
ctypedef int64_t asynccall__spacename_key__status_attributes_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, hyperdex_client_returncode* status, const hyperdex_client_attribute** attrs, size_t* attrs_sz)
ctypedef int64_t asynccall__spacename_key_attributenames__status_attributes_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, const char** attrnames, size_t attrnames_sz, hyperdex_client_returncode* status, const hyperdex_client_attribute** attrs, size_t* attrs_sz)
ctypedef int64_t asynccall__spacename_key_attributes__status_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, const hyperdex_client_attribute* attrs, size_t attrs_sz, hyperdex_client_returncode* status)
ctypedef int64_t microtransactioncall__microtransaction_attributes___fptr(hyperdex_client* client, hyperdex_client_microtransaction* microtransaction, const hyperdex_client_attribute* attrs, size_t attrs_sz)
ctypedef int64_t asynccall__spacename_key_predicates_attributes__status_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, const hyperdex_client_attribute_check* checks, size_t checks_sz, const hyperdex_client_attribute* attrs, size_t attrs_sz, hyperdex_client_returncode* status)
ctypedef int64_t asynccall__spacename_predicates_attributes__status_count_fptr(hyperdex_client* client, const char* space, const hyperdex_client_attribute_check* checks, size_t checks_sz, const hyperdex_client_attribute* attrs, size_t attrs_sz, hyperdex_client_returncode* status, uint64_t* count)
ctypedef int64_t asynccall__spacename_key__status_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, hyperdex_client_returncode* status)
ctypedef int64_t asynccall__spacename_key_predicates__status_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, const hyperdex_client_attribute_check* checks, size_t checks_sz, hyperdex_client_returncode* status)
ctypedef int64_t asynccall__spacename_predicates__status_count_fptr(hyperdex_client* client, const char* space, const hyperdex_client_attribute_check* checks, size_t checks_sz, hyperdex_client_returncode* status, uint64_t* count)
ctypedef int64_t asynccall__spacename_key_mapattributes__status_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, const hyperdex_client_map_attribute* mapattrs, size_t mapattrs_sz, hyperdex_client_returncode* status)
ctypedef int64_t asynccall__spacename_key_predicates_mapattributes__status_fptr(hyperdex_client* client, const char* space, const char* key, size_t key_sz, const hyperdex_client_attribute_check* checks, size_t checks_sz, const hyperdex_client_map_attribute* mapattrs, size_t mapattrs_sz, hyperdex_client_returncode* status)
ctypedef int64_t asynccall__spacename_predicates_mapattributes__status_count_fptr(hyperdex_client* client, const char* space, const hyperdex_client_attribute_check* checks, size_t checks_sz, const hyperdex_client_map_attribute* mapattrs, size_t mapattrs_sz, hyperdex_client_returncode* status, uint64_t* count)
ctypedef int64_t iterator__spacename_predicates__status_attributes_fptr(hyperdex_client* client, const char* space, const hyperdex_client_attribute_check* checks, size_t checks_sz, hyperdex_client_returncode* status, const hyperdex_client_attribute** attrs, size_t* attrs_sz)
ctypedef int64_t asynccall__spacename_predicates__status_description_fptr(hyperdex_client* client, const char* space, const hyperdex_client_attribute_check* checks, size_t checks_sz, hyperdex_client_returncode* status, const char** description)
ctypedef int64_t iterator__spacename_predicates_sortby_limit_maxmin__status_attributes_fptr(hyperdex_client* client, const char* space, const hyperdex_client_attribute_check* checks, size_t checks_sz, const char* sort_by, uint64_t limit, int maxmin, hyperdex_client_returncode* status, const hyperdex_client_attribute** attrs, size_t* attrs_sz)
# End Automatically Generated Function Pointers


class HyperDexClientException(Exception):

    def __init__(self, status, message):
        super(HyperDexClientException, self).__init__(self)
        self._status = status
        self._symbol = hyperdex_client_returncode_to_string(self._status)
        self._message = message

    def status(self):
        return self._status

    def symbol(self):
        return self._symbol

    def message(self):
        return self._message

    def __str__(self):
        return 'HyperDexClientException: {0} [{1}]'.format(self.message(), self.symbol())

    def __repr__(self):
        return str(self)


cdef hyperdex_python_client_convert_string(hyperdex_ds_arena* arena, bytes x,
                                           const char** value,
                                           size_t* value_sz,
                                           hyperdatatype* datatype):
    cdef hyperdex_ds_returncode error
    if hyperdex_ds_copy_string(arena, x, len(x), &error, value, value_sz) < 0:
        raise MemoryError()
    datatype[0] = HYPERDATATYPE_STRING


cdef hyperdex_python_client_convert_int(hyperdex_ds_arena* arena, long x,
                                        const char** value,
                                        size_t* value_sz,
                                        hyperdatatype* datatype):
    cdef hyperdex_ds_returncode error
    if hyperdex_ds_copy_int(arena, x, &error, value, value_sz) < 0:
        raise MemoryError()
    datatype[0] = HYPERDATATYPE_INT64


cdef hyperdex_python_client_convert_float(hyperdex_ds_arena* arena, double x,
                                          const char** value,
                                          size_t* value_sz,
                                          hyperdatatype* datatype):
    cdef hyperdex_ds_returncode error
    if hyperdex_ds_copy_float(arena, x, &error, value, value_sz) < 0:
        raise MemoryError()
    datatype[0] = HYPERDATATYPE_FLOAT


cdef hyperdex_python_client_handle_elem_error(hyperdex_ds_returncode error, str etype):
    if error == HYPERDEX_DS_NOMEM:
        raise MemoryError()
    elif error == HYPERDEX_DS_MIXED_TYPES:
        raise TypeError("Cannot add " + etype + " to a heterogenous container")
    else:
        raise TypeError("Cannot convert " + etype + " to a HyperDex type")

